Add isFriend and isSelft field to get by id
